@@ -3,19 +3,15 @@ using Terraria.UI;
 
 namespace Reforged.Common.UI;
 
-internal class InventorySlot : UIElement
+internal class ReforgeSlot : UIElement
 {
-    internal Item Item;
     private readonly float scale;
     internal float opacity;
-    private readonly bool noInteraction;
 
-    public InventorySlot(Item item, float scale = 1f, float opacity = 1f, bool noInteraction = false)
+    public ReforgeSlot(float scale = 1f, float opacity = 1f)
     {
-        Item = item;
         this.scale = scale;
         this.opacity = opacity;
-        this.noInteraction = noInteraction;
 
         Width.Set(TextureAssets.InventoryBack9.Value.Width * scale, 0f);
         Height.Set(TextureAssets.InventoryBack9.Value.Height * scale, 0f);
@@ -35,18 +31,15 @@ internal class InventorySlot : UIElement
             Main.LocalPlayer.mouseInterface = true;
             Main.craftingHide = true;
 
-            if (!noInteraction)
-            {
-                ItemSlot.LeftClick(ref Item, context);
+            ItemSlot.LeftClick(ref Main.reforgeItem, context);
 
-                if (Main.mouseLeftRelease && Main.mouseLeft)
-                    Recipe.FindRecipes();
+            if (Main.mouseLeftRelease && Main.mouseLeft)
+                Recipe.FindRecipes();
 
-                ItemSlot.RightClick(ref Item, context);
-                ItemSlot.MouseHover(ref Item, context);
-            }
+            ItemSlot.RightClick(ref Main.reforgeItem, context);
+            ItemSlot.MouseHover(ref Main.reforgeItem, context);
         }
-        ItemSlot.Draw(spriteBatch, ref Item, context, GetDimensions().ToRectangle().TopLeft());
+        ItemSlot.Draw(spriteBatch, ref Main.reforgeItem, context, GetDimensions().ToRectangle().TopLeft());
 
         Main.inventoryScale = oldScale;
         Main.inventoryBack = oldColor;
