@@ -1,3 +1,3 @@
 displayName = Reforged!
 author = QuestionMark
-version = 1.1
+version = 1.1.1
